itest fixup