@@ -38,6 +38,7 @@
 package itest;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -77,13 +78,13 @@ public class ArchivedRecordingJwtDownloadIT extends JwtAssetsSelfTest {
                     StringUtils.substringAfter(archivedResource.getPath(), "recordings/");
             String downloadUrl =
                     getTokenDownloadUrl(
-                            new URL(
-                                    String.format(
-                                            "http://%s:%d/api/beta/recordings/%s/%s",
-                                            Utils.WEB_HOST,
-                                            Utils.WEB_PORT,
-                                            SELF_REFERENCE_TARGET_ID,
-                                            recordingName)),
+                            new URI(String.format("http://%s:%d/", Utils.WEB_HOST, Utils.WEB_PORT))
+                                    .resolve(
+                                            String.format(
+                                                    "api/beta/recordings/%s/%s",
+                                                    SELF_REFERENCE_TARGET_ID, recordingName))
+                                    .normalize()
+                                    .toURL(),
                             Map.of(
                                     "targetId",
                                     SELF_REFERENCE_TARGET_ID_RAW,
